Revision history for Perl extension XML::SAX.

0.17  ?? ??? 2008  Grant McLean
    - Fixed handling of numeric character entities in attribute values
    - Fix for numeric character entities spanning end of buffer
    - Performance fix for parsing from large strings (patch from Gordon Lack)

0.16  27 Jun 2007  Grant McLean
    - Applied patch for PI handling from RT#19173

0.15  08 Feb 2007  Grant McLean
    - Fixed handling of entities in attribute values
    - Cleaned up some benign warnings

0.14  23 Apr 2006  Matt Sergeant
    - Fixed CDATA section parsing (Uwe Voelker)
    - Fix Makefile.PL for VMS
    - Support calling set_handler() mid-parse
    - Fix for when random modules overload UNIVERSAL::AUTOLOAD()
    - Fix case when ParserDetails.ini isn't being updated but we are doing an
      upgrade.

0.13  24 Oct 2005  Matt Sergeant
    - Complete re-write of XML::SAX::PurePerl for performance
    - Support Encoding & XMLVersion in DocumentLocator interface
    - A few conformance tweaks to match perl SAX 2.1.

0.12  20 Nov 2002  Matt Sergeant
    - Made sure SAX.ini works as documented
    - Fixed when you specify Module (version)

0.11  03 Sep 2002  Matt Sergeant
    - Base: Merged in XML::SAX::Base 1.04 (including memory leak fixes)
    - ParserFactory: Made it do what the docs say when you specify
      a module version number.
    - SAX: Fixed XML::SAX::Intro typo.
    - ParserFactory: Fixed (and test) broken version in parser pkg

0.10  14 Feb 2002  Matt Sergeant
    - PurePerl: Fixed PubidChar missing '-'
    - ParserFactory: Allow version in parser package

0.09  06 Feb 2002  Matt Sergeant
    - PurePerl: Performance enhancements
    - PurePerl: Line End handling implemented.
    - PurePerl: Attribute Value Normalization implemented (mostly).
    - PurePerl: Fixed element copying for end_element.

0.08  30 Jan 2002  Matt Sergeant
    - Fixes for perl 5.7.2

0.07  29 Jan 2002  Matt Sergeant
    - Fixed higher utf8 chars to work on both 5.005 and 5.6.1